// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`richTextInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
          for="rich-text-input-_r_0_"
          id="rich-text-input-_r_0_-label"
        >
          Test
        </label>
        <div
          class="uv_nb9uyi7 uv_nb9uyi9 uv_nb9uyib uv_nb9uyie uv_toi52u0 uv_toi52u2d"
        >
          <div
            class="uv_nb9uyi5"
          >
            <div
              class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              role="toolbar"
            >
              <div
                class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <button
                  aria-label="Bold"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      BoldIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.25 4A.75.75 0 0 1 5 3.25h3.67a2.875 2.875 0 0 1 2.254 4.659 3.07 3.07 0 0 1 1.007 2.273 3.07 3.07 0 0 1-3.068 3.068H5a.75.75 0 0 1-.749-.75zm2.273 5v2.363h1.954a1.182 1.182 0 0 0 0-2.363zm0-1.886V5.137h1.76a.988.988 0 0 1 0 1.977z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Italic"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ItalicIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M6.863 3.75a.75.75 0 0 1 .75-.75h3.863a.75.75 0 0 1 0 1.5h-1.43l-2.5 7h.84a.75.75 0 0 1 0 1.5H4.524a.75.75 0 0 1 0-1.5h1.43l2.5-7h-.84a.75.75 0 0 1-.75-.75"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Underline"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      UnderlineIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.91 3a.75.75 0 0 1 .75.75v3.863a2.34 2.34 0 0 0 4.68 0V3.75a.75.75 0 0 1 1.5 0v3.863a3.84 3.84 0 1 1-7.68 0V3.75A.75.75 0 0 1 4.91 3M3 12.25a.75.75 0 0 1 .75-.75h8.5a.75.75 0 0 1 0 1.5h-8.5a.75.75 0 0 1-.75-.75"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <button
                  aria-label="Bullet List"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ListBulletIcon
                    </title>
                    <path
                      d="M5.455 5.333c0-.413.335-.748.748-.748h6.037a.747.747 0 1 1 0 1.496H6.203a.75.75 0 0 1-.748-.748m-.593 0a.925.925 0 1 1-1.85 0 .925.925 0 0 1 1.85 0M5.455 8c0-.413.335-.748.748-.748h6.037a.747.747 0 1 1 0 1.496H6.203A.75.75 0 0 1 5.455 8m-.593 0a.925.925 0 1 1-1.85 0 .925.925 0 0 1 1.85 0m.593 2.667c0-.413.335-.748.748-.748h6.037a.747.747 0 1 1 0 1.496H6.203a.75.75 0 0 1-.748-.748m-.593 0a.925.925 0 1 1-1.85 0 .925.925 0 0 1 1.85 0"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Ordered List"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ListNumberIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M5.463 5.043a.75.75 0 0 1 .75-.75h5.912a.75.75 0 0 1 0 1.5H6.213a.75.75 0 0 1-.75-.75m0 2.958c0-.415.335-.75.75-.75h5.911a.75.75 0 1 1 0 1.5H6.213a.75.75 0 0 1-.75-.75m-.001 2.955a.75.75 0 0 1 .75-.75h5.912a.75.75 0 0 1 0 1.5H6.212a.75.75 0 0 1-.75-.75m-2.337-7.02a.5.5 0 0 1 .5-.5h.555a.5.5 0 0 1 .5.5v1.347h.054a.5.5 0 0 1 0 1H3.625a.5.5 0 1 1 0-1h.055v-.847h-.055a.5.5 0 0 1-.5-.5M4.21 7.385l-.021-.004-.021.004-.018.013a.5.5 0 0 1-.725-.689 1.06 1.06 0 0 1 1.161-.251 1.06 1.06 0 0 1 .58.579 1.05 1.05 0 0 1-.245 1.157l-.06.06a.5.5 0 0 1-.127.984H3.67a.5.5 0 0 1-.354-.853l.911-.911.012-.017.005-.021-.004-.021a.06.06 0 0 0-.03-.03M3.125 9.848a.5.5 0 0 1 .5-.5h.554a1.054 1.054 0 0 1 .897 1.608 1.055 1.055 0 0 1-.151 1.3 1.06 1.06 0 0 1-.746.308h-.554a.5.5 0 0 1 0-1h.554a.055.055 0 0 0 .055-.054.06.06 0 0 0-.016-.038.05.05 0 0 0-.039-.015h-.184a.5.5 0 1 1 0-1h.184a.06.06 0 0 0 .039-.016.055.055 0 0 0-.039-.093h-.554a.5.5 0 0 1-.5-.5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="uv_nb9uyi3"
          >
            <div
              aria-labelledby="rich-text-input-_r_0_-label"
              class="uv_nb9uyi6 ProseMirror"
              contenteditable="true"
              id="rich-text-input-_r_0_"
              role="textbox"
              style="--uv_nb9uyi0: calc(1.5em * 10 + 2 * var(--uv_theme_rwwhsl9u)); --uv_nb9uyi1: calc(1.5em * 5 + 2 * var(--uv_theme_rwwhsl9u));"
              translate="no"
            >
              <p>
                <br
                  class="ProseMirror-trailingBreak"
                />
              </p>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`richTextInputField > should render correctly generated 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
          for="rich-text-input-_r_7_"
          id="rich-text-input-_r_7_-label"
        >
          Test
        </label>
        <div
          class="uv_nb9uyi7 uv_nb9uyi9 uv_nb9uyib uv_nb9uyie uv_toi52u0 uv_toi52u2d"
        >
          <div
            class="uv_nb9uyi5"
          >
            <div
              class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              role="toolbar"
            >
              <div
                class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <button
                  aria-label="Bold"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      BoldIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.25 4A.75.75 0 0 1 5 3.25h3.67a2.875 2.875 0 0 1 2.254 4.659 3.07 3.07 0 0 1 1.007 2.273 3.07 3.07 0 0 1-3.068 3.068H5a.75.75 0 0 1-.749-.75zm2.273 5v2.363h1.954a1.182 1.182 0 0 0 0-2.363zm0-1.886V5.137h1.76a.988.988 0 0 1 0 1.977z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Italic"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ItalicIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M6.863 3.75a.75.75 0 0 1 .75-.75h3.863a.75.75 0 0 1 0 1.5h-1.43l-2.5 7h.84a.75.75 0 0 1 0 1.5H4.524a.75.75 0 0 1 0-1.5h1.43l2.5-7h-.84a.75.75 0 0 1-.75-.75"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Underline"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      UnderlineIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.91 3a.75.75 0 0 1 .75.75v3.863a2.34 2.34 0 0 0 4.68 0V3.75a.75.75 0 0 1 1.5 0v3.863a3.84 3.84 0 1 1-7.68 0V3.75A.75.75 0 0 1 4.91 3M3 12.25a.75.75 0 0 1 .75-.75h8.5a.75.75 0 0 1 0 1.5h-8.5a.75.75 0 0 1-.75-.75"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
              >
                <button
                  aria-label="Bullet List"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ListBulletIcon
                    </title>
                    <path
                      d="M5.455 5.333c0-.413.335-.748.748-.748h6.037a.747.747 0 1 1 0 1.496H6.203a.75.75 0 0 1-.748-.748m-.593 0a.925.925 0 1 1-1.85 0 .925.925 0 0 1 1.85 0M5.455 8c0-.413.335-.748.748-.748h6.037a.747.747 0 1 1 0 1.496H6.203A.75.75 0 0 1 5.455 8m-.593 0a.925.925 0 1 1-1.85 0 .925.925 0 0 1 1.85 0m.593 2.667c0-.413.335-.748.748-.748h6.037a.747.747 0 1 1 0 1.496H6.203a.75.75 0 0 1-.748-.748m-.593 0a.925.925 0 1 1-1.85 0 .925.925 0 0 1 1.85 0"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Ordered List"
                  class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe8 uv_e1wcoeg uv_e1wcoej uv_e1wcoe19"
                  type="button"
                >
                  <svg
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ListNumberIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M5.463 5.043a.75.75 0 0 1 .75-.75h5.912a.75.75 0 0 1 0 1.5H6.213a.75.75 0 0 1-.75-.75m0 2.958c0-.415.335-.75.75-.75h5.911a.75.75 0 1 1 0 1.5H6.213a.75.75 0 0 1-.75-.75m-.001 2.955a.75.75 0 0 1 .75-.75h5.912a.75.75 0 0 1 0 1.5H6.212a.75.75 0 0 1-.75-.75m-2.337-7.02a.5.5 0 0 1 .5-.5h.555a.5.5 0 0 1 .5.5v1.347h.054a.5.5 0 0 1 0 1H3.625a.5.5 0 1 1 0-1h.055v-.847h-.055a.5.5 0 0 1-.5-.5M4.21 7.385l-.021-.004-.021.004-.018.013a.5.5 0 0 1-.725-.689 1.06 1.06 0 0 1 1.161-.251 1.06 1.06 0 0 1 .58.579 1.05 1.05 0 0 1-.245 1.157l-.06.06a.5.5 0 0 1-.127.984H3.67a.5.5 0 0 1-.354-.853l.911-.911.012-.017.005-.021-.004-.021a.06.06 0 0 0-.03-.03M3.125 9.848a.5.5 0 0 1 .5-.5h.554a1.054 1.054 0 0 1 .897 1.608 1.055 1.055 0 0 1-.151 1.3 1.06 1.06 0 0 1-.746.308h-.554a.5.5 0 0 1 0-1h.554a.055.055 0 0 0 .055-.054.06.06 0 0 0-.016-.038.05.05 0 0 0-.039-.015h-.184a.5.5 0 1 1 0-1h.184a.06.06 0 0 0 .039-.016.055.055 0 0 0-.039-.093h-.554a.5.5 0 0 1-.5-.5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="uv_nb9uyi3"
          >
            <div
              aria-labelledby="rich-text-input-_r_7_-label"
              class="uv_nb9uyi6 ProseMirror"
              contenteditable="true"
              id="rich-text-input-_r_7_"
              role="textbox"
              style="--uv_nb9uyi0: calc(1.5em * 10 + 2 * var(--uv_theme_rwwhsl9u)); --uv_nb9uyi1: calc(1.5em * 5 + 2 * var(--uv_theme_rwwhsl9u));"
              translate="no"
            >
              <p>
                This is an example
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoei uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
